[package]
name = "blight"
description = "A hassle-free CLI backlight utility/library for Linux."
categories = ["command-line-utilities","os::linux-apis"]
keywords = ["backlight","CLI","utility","hybrid-gpu","brightness"]
authors = ["Maaz Ahmed <mzahmed95@gmail.com>"]
repository = "https://github.com/VoltaireNoir/blight"
license = "MIT"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
colored = "2.0.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = 'abort'

[profile.dist]
inherits = "release"

[workspace.metadata.dist]
cargo-dist-version = "0.0.4"
rust-toolchain-version = "1.68.0"
ci = ["github"]
targets = ["x86_64-unknown-linux-gnu"]
