[package]
name = "blight"
description = "A hassle-free CLI backlight utility/library for Linux."
categories = ["command-line-utilities", "os::linux-apis"]
keywords = ["backlight", "CLI", "utility", "hybrid-gpu", "brightness"]
authors = ["Maaz Ahmed <mzahmed95@gmail.com>"]
repository = "https://github.com/VoltaireNoir/blight"
license = "MIT"
version = "0.6.0"
edition = "2021"
exclude = ["*.png", ".github/workflows"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
colored = "2.0.3"
fs4 = { version = "0.6.6", features = ["sync"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = 'abort'

[profile.dist]
inherits = "release"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.68.0"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu"]
# The installers to generate for each app
installers = []
