[package]
name = "blight"
description = "A hassle-free CLI backlight utility/library for Linux."
categories = ["command-line-utilities", "os::linux-apis"]
keywords = ["backlight", "CLI", "utility", "hybrid-gpu", "brightness"]
authors = ["Maaz Ahmed <mzahmed95@gmail.com>"]
repository = "https://github.com/VoltaireNoir/blight"
license = "MIT"
version = "0.8.0"
edition = "2021"
exclude = ["*.png", "*.jpg", "*.gif", "demo.tape", ".github/workflows"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
colored = { version = "2.0.3", optional = true }

[features]
default = ["cli"]
locking = []
cli = ["locking", "dep:colored"]

[[bin]]
name = "blight"
path = "src/main.rs"
required-features = ["cli"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = 'abort'

[profile.dist]
inherits = "release"
